fix - z-index

--- a/app/components/navbar/Navbar.module.css
+++ b/app/components/navbar/Navbar.module.css
@@ -6,7 +6,7 @@
   max-height: var(--navbar-height);
   background-color: var(--color-navbar);
   backdrop-filter: blur(10px);
-  z-index: 999;
+  z-index: 998;
   overflow: hidden;
   transition: max-height 0.6s ease-in;
 }
